# ggui

./: .gitignore  DevNotes.md  LICENSE  Pipfile  README.md  __init__.py  autochop.py  config.py  cr_dra_lc.csv  gguiCLI_startup.py  gguicli_startup.py  make_param.py  mastAPITest.py  mastCrossSearch.py  pyproject.toml  qtTabLayouts.py  readthedocs.yml  requirements.txt  setup.py  targetManager.py
docs/: Makefile  doc-build-requirements.txt  gGuiPoster.pub  make.bat
docs/source/: about.rst  conf.py  contents.rst  gGuiWireframe_Phase1.vsdm  ggui.rst  index.rst  known_issues.rst  modules.rst  release_list.rst  team.rst  using_ggui.rst
docs/source/release_notes/: v1.1.0.rst  v1.2.0.rst
ggui/: autochop.py  ggui.conf  ggui.py  main.py  make_param.py  qtTabLayouts.py  targetManager.py  version.py
utilities/: sampleGGUITargetList.yml
