[tool.flit.metadata]
module = "ggui"
author = "Duy Nguyen, Scott Fleming"
author-email = "dnguyen@nrao.edu, fleming@stsci.edu"
home-page = "https://github.com/gphoton-tools/ggui"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["pyqt5", "glueviz >= 0.13.3", "pyyaml"]

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.entrypoints."ggui.main"]
ggui = "ggui.ggui:main"